--- a/Commutative Algebra/macros.tex
+++ b/Commutative Algebra/macros.tex
@@ -42,6 +42,7 @@
 \newcommand{\pfi}{\originalphi} % Define \pfi to display the original \phi
 \newcommand{\diota}{\dot{\iota}}
 \newcommand{\Log}{\operatorname{Log}}
+\newcommand{\id}{\text{\textbf{id}}}
 \usepackage{amsmath}
 
 \makeatletter
@@ -91,3 +92,4 @@
   \tikz\fill[scale=0.4, color=blue]
   (0,.35) -- (.25,0) -- (1,.7) -- (.25,.15) -- cycle;%
 }
+
