--- a/Complex Geometry/macros.tex
+++ b/Complex Geometry/macros.tex
@@ -35,12 +35,15 @@
 \newcommand{\power}[1]{\mathcal{P}(#1)}
 \newcommand{\dcup}{\mathbin{\dot{\cup}}}
 \newcommand{\diam}[1]{\text{diam}\, #1}
+\newcommand{\quotient}{\diagup}
 \newcommand{\at}{\Big|}
 \let\originalphi\phi % Store the original \phi in \originalphi
 \renewcommand{\phi}{\varphi} % Redefine \phi to \varphi
 \newcommand{\pfi}{\originalphi} % Define \pfi to display the original \phi
 \newcommand{\diota}{\dot{\iota}}
 \newcommand{\Log}{\operatorname{Log}}
+
+\newcommand{\id}{\text{\textbf{id}}}
 \usepackage{amsmath}
 
 \makeatletter
