--- a/Complex Geometry/Complex Geometry.tex
+++ b/Complex Geometry/Complex Geometry.tex
@@ -47,17 +47,14 @@ Cauchy's Integral Theorem is the cornerstone of complex analysis. Its proof fund
 \begin{align*}
 f(z)= \frac{1}{2\pi  i}\int_{\partial B_\epsilon (z_0) }\frac{f(\xi)}{\xi - z}d\xi,\quad\text{ for all }\epsilon <r
 \end{align*}
-This with the decomposition 
-\begin{align}
-\label{dexiz}
-\frac{1}{\xi-z}= \frac{1}{\xi-z_0} + \frac{z-z_0}{(\xi -z_0)^2} + \cdots + \frac{(z-z_0)^n}{(\xi-z_0)^{n+1}}+  \frac{(z-z_0)^{n+1}}{(\xi-z)(\xi-z_0)^{n+1}}
-\end{align}
-and an estimation using $\abso{z-z_0} < \abso{\xi-z_0}$ shows that holomorphic functions are locally power series 
+This with the uniform convergence of 
+\begin{align*}
+\frac{f(\xi)}{\xi -z} = \sum_{n=0}^{\infty} \frac{f(\xi) (z-z_0)^n }{(\xi -z_0)^{n+1}}\text{ on }\partial B_\epsilon (z_0)
+\end{align*}
+shows that holomorphic functions are locally power series 
 \begin{align*}
 f(z)= \sum_{n=0}^{\infty} \frac{1}{2\pi i}\Big(\int_{\partial B_\epsilon (z_0)} \frac{f(\xi)}{(\xi- z_0)^{n+1}}d\xi \Big) (z-z_0)^{n},\quad\text{for all }\epsilon <r \text{ and }z\in B_\epsilon (z_0)
 \end{align*}
-
-
 Because all power series converge uniformly on disk with radius strictly smaller than its convergence radius, we may differentiate term by term and have \textbf{Taylor's Theorem for power series} 
 \begin{align*}
 f(z)= \sum_{n=0}^{\infty} \frac{f^{(n)}(z_0)}{n!}(z-z_0)^n
@@ -70,13 +67,13 @@ If $f$ is bounded, then direct estimations show that $c_n=0$ for all $n>0$. This
 \begin{align*}
 f(z)= \frac{1}{2\pi  i} \Big(\int_{\partial B_{R- \epsilon }(z_0)} \frac{f(\xi)}{\xi - z}d\xi - \int_{\partial B_{r+\epsilon }(z_0)} \frac{f(\xi)}{\xi -z}d\xi  \Big)
 \end{align*}
-This with \myref{decomposition}{dexiz} and the following decomposition: 
+This with the uniform convergence
 \begin{align*}
-\frac{1}{z-\xi}= \frac{1}{z-z_0}+ \frac{\xi - z_0}{(z-z_0)^2}+ \cdots + \frac{(\xi -z_0)^{n-1}}{(z-z_0)^n} - \frac{(\xi - z_0)^n}{(z-z_0)^n (\xi -z)}
+\frac{f(\xi)}{\xi -z} = \sum_{n=0}^{\infty} \frac{f(\xi) (z-z_0)^n }{(\xi -z_0)^{n+1}}\text{ on }\partial B_{R-\epsilon } (z_0)
 \end{align*}
-and two estimations that use 
+and the uniform convergence 
 \begin{align*}
-\abso{z-z_0}< \abso{\xi - z_0}\text{ for }\xi \in \partial B_{R-\epsilon} (z_0)\text{ and } \abso{\xi - z_0} < \abso{z-z_0} \text{ for }\xi \in \partial B_{r+\epsilon } (z_0)
+\frac{f(\xi)}{z-\xi}= \sum_{n=0}^{\infty} \frac{f(\xi)(\xi-z_0)^n}{(z-z_0)^{n+1}}\text{ on }\partial B_{r+\epsilon }(z_0)
 \end{align*}
 shows that 
 \begin{align*}
@@ -96,7 +93,7 @@ If $f$ is defined and holomorphic on some deleted neighborhood $B_\epsilon (z_0)
 \begin{align*}
 \operatorname{Res}(f,z_0)\triangleq c_{-1}
 \end{align*}
-to denote the \textbf{residue} of $f$ at $z_0$. Let $D\subseteq \C$ be a simply connected domain, and suppose holomorphic $f$ is defined on $D$ except at some finite numbers of singularities. Let $\gamma :[a,b]\rightarrow D$ be some \textbf{simple}\footnote{By simple, we mean  $\gamma (t)=\gamma (s)$ if and only if $\abso{t-s}=\abso{a-b}$} closed contour, so that the image of $\gamma $ is a Jordan curve. Under this condition, we may apply the \textbf{Jordan Curve Theorem} to distinguish between the interior and the exterior of $\gamma $. A simple closed contour $\gamma $ is \textbf{positively oriented} if the winding number is positive in the region enclosed by $\gamma $. We may now state our version of \textbf{Cauchy's Residue Theorem}. 
+to denote the \textbf{residue} of $f$ at $z_0$. Let $D\subseteq \C$ be a simply connected domain, and suppose holomorphic $f$ is defined on $D$ except at some finite numbers of singularities. Let $\gamma :[a,b]\rightarrow D$ be some \textbf{simple}\footnote{By simple, we mean  $\gamma (t)=\gamma (s)$ if and only if $\abso{t-s}=\abso{a-b}$} closed contour, so that the image of $\gamma $ is a Jordan curve, and we may apply the \textbf{Jordan Curve Theorem} to distinguish between the interior and the exterior of $\gamma $. A simple closed contour $\gamma $ is \textbf{positively oriented} if the winding number is positive in the region enclosed by $\gamma $. We may now state our version of \textbf{Cauchy's Residue Theorem}. 
 \begin{theorem}
 \textbf{(Cauchy's Residue Theorem)}  Let $D\subseteq \C$ be a simply connected domain, and let $\gamma :[a,b]\rightarrow D$ be some positively oriented simple closed contour. If $f$ is is defined and holomorphic on  $D$ except at a finite set of points $\set{z_1,\dots ,z_n}$ that are all enclosed by $\gamma $, then 
 \begin{align*}
@@ -127,7 +124,7 @@ to deduce
 \begin{align*}
 \operatorname{Res}\Big(\frac{f'}{f},z_0 \Big)=k
 \end{align*}
-These observations together with Cauchy's Residue Theorem now give us the \textbf{Argument Principle}. Given simply connected domain $D\subseteq \C$, positively oriented simple closed contour $\gamma :[a,b]\rightarrow D$ and some $f$ \textbf{meromorphic}\footnote{By $f$ being meromorphic on open $U$, we mean that $f$ is holomorphic on $U$ except on a finite set of poles.} on $D$, if $f$ has no zeros and has no poles on the image of $\gamma $, then   
+These observations together with Cauchy's Residue Theorem now give us the \textbf{Argument Principle}. Given simply connected domain $D\subseteq \C$, positively oriented simple closed contour $\gamma :[a,b]\rightarrow D$ and some $f$ \textbf{meromorphic}\footnote{By $f$ being meromorphic on open $U$, we mean that $f$ is holomorphic on $U$ except on a finite set of poles.} on $D$, if $f$ has neither zeros nor poles on the image of $\gamma $, then   
 \begin{align*}
 \int_{\gamma } \frac{f'(\xi)}{f(\xi)}d\xi = 2\pi  i (Z-P)
 \end{align*}
@@ -149,11 +146,227 @@ we see
 \begin{align*}
 \int_{\tilde{\gamma }} \frac{d\xi}{\xi}= \int_{\gamma } \frac{(1+ \frac{g}{f})'}{1+\frac{g}{f}}d\xi = Z_{f+g}-Z_f 
 \end{align*}
-Finally, noting that $\tilde{\gamma }$ as a simple closed contour lies in $\operatorname{Re}(z)>0$ \footnote{This is because  $\abso{\frac{g}{f}}<1$ on $\gamma $.}, and that $\log(\xi)$ is well defined on $\operatorname{Re}(z)>0$ with derivative $\frac{1}{\xi}$\footnote{By real inverse function theorem.}, we can finally conclude the \textbf{Rouché's theorem}: 
+Therefore, once we note  that $\tilde{\gamma }$ as a simple closed contour lies in $\operatorname{Re}(z)>0$ \footnote{This is because  $\abso{g}<\abso{f}$ on $\gamma $.}, and note that $\log(z)$ is well-defined on $\operatorname{Re}(z)>0$ with derivative $\frac{1}{z}$\footnote{by real inverse function theorem.}, we may finally use Fundamental Theorem of Calculus to conclude the \textbf{Rouché's Theorem}: 
 \begin{align*}
-Z_{f+g}-Z_f=0
+Z_f=Z_{f+g}
 \end{align*}
+We close this section by proving the \textbf{Open Mapping Theorem} and the \textbf{Maximum Modulus Principle}. Let $U\subseteq \C$ be some domain, and let $f:U\rightarrow \C$ be holomorphic and non-constant. Because open disks are also domains, and because by Identity Theorem, $f$ can not be constant on any open disks contained by $U$, to prove $f$ is an open map, we only have to prove $f(U)$ is open, without loss of generality.\\
+
+Fix $w_0=f(z_0)$, and define $g:U\rightarrow \C$ by 
+\begin{align*}
+g(z)\triangleq f(z)- w_0
+\end{align*}
+Because $g$ is non-constant, by Identity Theorem, there exists some closed disk $K \subseteq U$ that centers $z_0$ and contains no zeros of $g$ other than  $z_0$.   
+Defining
+\begin{align*}
+r\triangleq \min_{\partial K}\abso{g}>0\text{ and }D\triangleq B_r(w_0)
+\end{align*}
+we may reduce the proof into proving $D \subseteq f(K^{\circ })$. For each $w_1 \neq w_0\in D$, define $h:U\rightarrow \C$ by 
+\begin{align*}
+h(z)\triangleq f(z)-w_1
+\end{align*}
+Observing  
+\begin{align*}
+\abso{g(z)}\geq r> \abso{w_0 - w_1}= \abso{h(z)-g(z)}\text{ for all }z\in \partial K
+\end{align*}
+we may use Rouché's Theorem  to conclude that $h$ indeed have some zero in $K^{\circ }$. We have shown $f(U)$ is indeed open, which implies $\set{\abso{f(z)}: z \in U}$ is open in $\R$, giving maximum modulus principle as a corollary.  
 \section{Riemann Mapping Theorem}
-\section{Cauchy's Integral and Residue Theorem}
+\section{Proof of Cauchy's Integral and Residue Theorem}
 \label{CITA}
+\chapter{Several Complex Variables}
+\section{Untitled}
+Given some open subset $U$ of $\C^n$, and some complex-valued function  $f:U\rightarrow \C$, we say $f$ is \textbf{holomorphic} in $z_1$ if for all  $(z_2,\dots, z_n)\in \C^{n-1}$, the function defined by $z_1 \mapsto f(z_1,\dots ,z_n)$ is holomorphic. In the context of theory of several complex variables, we use the notation $\epsilon \triangleq  (\epsilon_1,\dots ,\epsilon _n)$ to denote a tuple of positive real numbers, and we use the notation $B_\epsilon (a)\subseteq \C^n$ to denote \textbf{polydisc} 
+\begin{align*}
+\set{z\inc^n: \abso{z_i- a_i}<\epsilon_i \text{ for all }i}
+\end{align*}
+By repeatedly applying single variable version of Cauchy's integral formula, we see that if $f:U\rightarrow \C$ is holomorphic in all of its variables and $\overline{B_\epsilon (a)}\subseteq U$, then for all $z\in B_\epsilon (a)$, we have \textbf{Cauchy's integral formula in several variables}: 
+\begin{align*}
+f(z)= \frac{1}{(2\pi i)^n} \int_{\abso{\xi_1 - a_1}=\epsilon _1}\cdots \int_{\abso{\xi_n-a_n}= \epsilon_n} \frac{f(\xi_1,\dots ,\xi_n)}{(\xi_1-z_1)\cdots (\xi_n-z_n)}d\xi_n\cdots d\xi_1
+\end{align*}
+In this note, we use multi-index notation $\alpha = (\alpha _1,\dots ,\alpha _n) $, and adapt the notation 
+\begin{align*}
+\alpha +1 \triangleq (\alpha_1+1,\dots , \alpha_n+1)
+\end{align*}
+For each $\xi \in \partial B_\epsilon (a)$, because we have the absolute convergence 
+\begin{align*}
+  \sum_{\alpha_1 } \cdots \sum_{\alpha _n}  \abso{ \frac{(z-a)^{\alpha }}{(\xi-a)^{\alpha +1}}} \inr
+\end{align*}
+by Fubini's Theorem, for each sequence $\alpha^k$ that runs through $\N^n$, we have  
+\begin{align*}
+\sum_{k} \frac{(z-\alpha )^{\alpha ^k}}{(\xi-a)^{\alpha^k +1}}= \sum_{\alpha _1} \cdots \sum_{\alpha _n} \frac{(z-a)^{\alpha }}{(\xi-a)^{\alpha +1}} 
+\end{align*}
+so it make sense to write the multiple series into a single series 
+\begin{align*}
+\sum_{\alpha } \frac{(z-a)^{\alpha }}{(\xi-a)^{\alpha+1}}\triangleq \sum_{\alpha_1 } \cdots \sum_{\alpha _n} \frac{(z-a)^{\alpha }}{(\xi-a)^{\alpha +1}} 
+\end{align*}
+Now, because the convergence of $\sum_{\alpha } \frac{f(\xi)(z-a)^{\alpha }}{(\xi-a)^{\alpha }}$ is uniform on $\partial B_\epsilon (a)$, we have 
+\begin{align*}
+f(z)= \frac{1}{(2\pi i)^n} \sum_\alpha c_\alpha (z-a)^{\alpha } 
+\end{align*}
+where 
+ \begin{align*}
+c_\alpha = \int_{\abso{\xi_1-a_1}=\epsilon_1}\cdots \int_{\abso{\xi_n-a_n}=\epsilon _n} \frac{f(\xi)}{(\xi-a)^{\alpha +1}}d\xi
+\end{align*}
+\section{Hartog's Theorem on separate holomorphicity}
+\section{Bijective holomorphic map is biholomorphic}
+\chapter{Some Linear Algebra}
+\section{Complexification}
+Let $V$ be a finite dimensional real vector space. By \textbf{complexification} $V_\C$ of  $V$, formally, we mean the complex vector space $V\times V$ defined by 
+\begin{align*}
+  (a+b i)(v_1,v_2)\triangleq (av_1-bv_2, av_2+bv_1)
+\end{align*}
+To make visual computation easier, we use the notation $v_1+iv_2$  to denote $(v_1,v_2)\in V_\C$. Note that if $V$ has a $\R$-basis  $\set{v_1,\dots ,v_n}$, then clearly $V_\C$ has  $\C$-basis  $\set{v_1,\dots ,v_n}$, so we know $\operatorname{Dim}_\C (V_\C)=\operatorname{Dim}_\R (V)$. By the term \textbf{complex conjugation} on $V_\C$, we mean the $\R$-linear map 
+\begin{align*}
+\overline{v_1+ iv_2}\triangleq v_1-iv_2
+\end{align*}
+which is not $\C$-linear. If $W$ is another real vector space, and  $f:V\rightarrow W$ is some $\R$-linear map, then the  \textbf{complexified map} $f_\C:V_\C \rightarrow W_\C$ is the $\C$-linear map defined by 
+\begin{align*}
+f_\C(v_1+iv_2)\triangleq f(v_1)+ if(v_2)
+\end{align*}
+Moreover, if $g$ is an inner product on $V$, we may also extend  $g$ onto $V_\C$ by defining 
+ \begin{align*}
+g_\C (u_1+iu_2, v_1+iv_2)\triangleq g(u_1,v_1)+g(u_2,v_2)+i [g(u_2,v_1)-g(u_1,v_2)]
+\end{align*}
+
+
+ By an \textbf{almost complex} structure on $V$, we mean some $\R$-linear map $J\in \operatorname{End}(V)$ whose squared is the negate of the identity map of $V$. Clearly, if $J$ is an almost complex structure on $V$, then we may make $V$ into a complex vector space by defining 
+\begin{align*}
+  (a+b i)v\triangleq av+bJ(v) 
+\end{align*}
+Notably, after this assignment of $\C$-action, we see that $\operatorname{Dim}_{\R}(V)$ must be even, since if $\set{v_1,\dots ,v_n}$ form a $\C$-basis for  $V$, then  $\set{v_1,J(v_1),\dots ,v_n,J(v_n)}$ form a $\R$-basis for  $V$. 
+
+Now, suppose $V$ is a finite dimensional real vector space with an almost complex structure  $J$, and consider the complexified map $J_\C\in \operatorname{End}_{\C}(V_\C)$. Routine computation shows that the squared of $J_\C$ is also the negate of the identity map of  $V_\C$. Let $V^{1,0},V^{0,1}$ be the eigenspace of $V_\C$ with respect to function $J_\C \in \operatorname{End}_\C(V_\C)$ eigenvalues $\pm i$. Computing for all $v\in V_\C$ that 
+\begin{align*}
+v=\Big( \frac{v- i J_\C(v)}{2} \Big)+ \Big( \frac{v+i J_\C(v)}{2} \Big) \in V^{1,0} \oplus  V^{0,1}
+\end{align*}
+we see that $V_\C$ is the direct sum of $V^{1,0}$ and $V^{0,1}$. Moreover, because the complex conjugation on $V_\C$ is an  $\R$-isomorphism between  $V^{1,0}$ and $V^{0,1}$\footnote{This is a result of routine computation.}, we see 
+\begin{align*}
+\operatorname{Dim}_\C (V^{1,0})= \operatorname{Dim}_\C (V^{0,1})=\frac{\operatorname{Dim}_\C (V_\C)}{2}
+\end{align*}
+This together with the clearly injective $\R$-linear map  $\pi ^{1,0}:V\rightarrow V^{1,0}$ defined by 
+\begin{align*}
+\pi ^{1,0} (v)\triangleq \frac{v-i J(v)}{2}
+\end{align*}
+shows\footnote{$\operatorname{Dim}_\R(V)=\operatorname{Dim}_\C (V_\C)=2\operatorname{Dim}_\C (V^{1,0})=\operatorname{Dim}_\R (V^{1,0})$} that $V$ and  $V^{1,0}$ are $\R$-isomorphic.\footnote{Noting that the imaginary unit $i$ forms an almost complex structure on $V^{1,0}$, one may even shows the isomorphism $\pi ^{1,0}(J(v))=i \pi ^{1,0}(v)$.} We adapt the notation 
+\begin{align*}
+\extp^{p,q}V\triangleq \extp^{p}V^{1,0}\otimes _\C \extp^{q}V^{0,1}
+\end{align*}
+and refer to elements $\alpha $ of $\extp^{p,q}V$ as \textbf{bidegree} $(p,q)$. 
+\begin{theorem}
+\textbf{(Decomposition of wedge product of $V_\C$ into bidegrees)} There exists a $\C$-linear isomorphism 
+ \begin{align*}
+\extp^k V_\C \cong \bigoplus _{p+q=k}\extp^{p,q}V
+\end{align*}
+\end{theorem}
+\begin{proof}
+Let $\set{e_1,\dots ,e_n}$ be a $\C$-basis for  $V^{1,0}$. Fix some  $p+q=k$. We know 
+\begin{align*}
+\bset{e_{i_1}\wedge  \cdots \wedge  e_{i_p}\otimes \overline{e_{j_1}}\wedge  \cdots \wedge  \overline{e_{j_q}}: 1\leq i_1<\cdots <i_p \leq n\text{ and }1\leq j_1<\cdots <j_q \leq n}
+\end{align*}
+forms a $\C$-basis for $\extp^{p,q}V$. Because $\set{e_1,\dots ,e_n, \overline{e_1},\dots ,\overline{e_n}}$ forms a $\C$-basis for $V_\C$, the $\C$-linear map $\phi_{p,q}:\extp^{p,q}V\rightarrow \extp^{k}V_\C$ determined by 
+\begin{align*}
+  e_{i_1}\wedge  \cdots \wedge  e_{i_p}\otimes \overline{e_{j_1}}\wedge  \cdots \wedge  \overline{e_{j_q}}\mapsto e_{i_1}\wedge  \cdots \wedge  e_{i_p}\wedge   \overline{e_{j_1}}\wedge  \cdots \wedge  \overline{e_{j_q}}
+\end{align*}
+is injective. One may now check that the $\C$-linear map
+\begin{align*}
+\bigoplus_{p+q=k}\phi_{p,q}: \bigoplus_{p+q=k}\extp^{p,q} V \rightarrow \extp^k V_\C
+\end{align*}
+forms a $\C$-linear isomorphism. 
+\end{proof}
+\section{Hodge star operator}
+Let $(V,g)$ be an oriented $d$-dimensional real inner product space whose orientation is determined by the orthonormal basis $\set{e_1,\dots ,e_d}$, for each exterior power $\extp^k V$, we may well define (?) an inner product $g^k$ on $\extp^k V$ such that for every orthonormal basis $\set{e_1,\dots ,e_d}$ of $V$, the basis  $\set{e_I \in \extp^k V:I=\set{i_1< \cdots <i_k}}$ is orthonormal for $\extp^k V$, and well define (?) the \textbf{Hodge star operator} $\star:\extp^k V \rightarrow \extp^{d-k} V$ so that 
+\begin{align*}
+\alpha \wedge \star \beta  = g^k(\alpha ,\beta ) \cdot e_1 \wedge  \cdots \wedge  e_d   \text{ for all }\alpha ,\beta  \in \extp^k V
+\end{align*}
+\begin{mdframed}
+Let $(V,g)$ be a finite dimensional real inner product space, and let $J:V\rightarrow V$ be an almost complex structure compatible with $g$.  Let $\omega\in \operatorname{Hom}^2(V\times V,\R)$ be the fundamental form associated with $(V,g,J)$. I read from your note and also the textbook that 
+\begin{align}
+\label{ggg}
+\omega \in \extp^{1,1}V^*
+\end{align}
+where $\extp^{1,1}W$ is defined by 
+\begin{align*}
+\extp^{1,1}W \triangleq \extp W^{1,0}\otimes _\C \extp W^{0,1}
+\end{align*}
+My question is: How does  \myref{statement}{ggg} make sense? Shouldn't $\extp^{1,1}V^*$ be the space of bilinear maps
+
+
+Thank you for your reply. I just realized that I wrongly identified $\extp^{1,1}V^*$. But I still can't piece things together to show that 
+\begin{align}
+\extp^{1,1}V^*\text{ is the space of }
+\end{align}
+ \begin{align*}
+g_\C (u_1+iu_2, v_1+iv_2)\triangleq g(u_1,v_1)+g(u_2,v_2)+i [g(u_2,v_1)-g(u_1,v_2)]
+\end{align*}
+and 
+\begin{align*}
+\omega_\C (u_1+iu_2, v_1+iv_2)\triangleq \omega(u_1,v_1)+\omega(u_2,v_2)+i [\omega(u_2,v_1)-\omega(u_1,v_2)]
+\end{align*}
+\begin{align*}
+\omega_\C (z_1v_1,z_2v_2)\triangleq z_1 \overline{z_2}\omega (v_1,v_2)
+\end{align*}
+
+\begin{align*}
+\extp^{1,1}V^* &= \extp^1 (V^{*})^{1,0} \otimes _\C \extp^1 (V^*)^{0,1} \\
+&=(V^*)^{1,0}\otimes_\C (V^*)^{0,1} \\
+&=\operatorname{Hom}^2([(V^*)^{1,0}]^*\times [(V^*)^{0,1}]^{*}, \C) \\
+&=\operatorname{Hom}^2(V^{1,0}\times V^{0,1},\C) 
+\end{align*}
+\begin{align*}
+\operatorname{Hom}^2(\extp (V^*)^{1,0}\times \extp (V^*)^{0,1},\C)
+\end{align*}
+by definition of tensor product? How cam an element $\omega \in \operatorname{Hom}^2 (V\times V,\R)$ be identified as an element of $\operatorname{Hom}^2(\extp (V^*)^{1,0}\times \extp (V^*)^{0,1},\C)$? 
+\end{mdframed}
+I realized I had the completely wrong understanding. Please confirm with me if my current understanding is correct. The statement   
+\begin{align}
+\omega \in \extp^{1,1}V^*
+\end{align}
+actually means 
+\begin{align}
+  \omega_\C \in \extp^2 V_\C^* &=\text{ alternating subspace of } V_\C^* \otimes V_\C^* \\
+  &=\text{ alternating subspace of }\operatorname{Hom}^2(V_\C\times V_\C ,\C)\\
+  &=\extp^{2,0}V^* \oplus \extp^{1,1}V^* \oplus \extp^{0,2}V^*
+\end{align}
+and that the components of $\omega_\C$ in $\extp^{2,0}V^*$ and $\extp^{0,2}V^*$ are both zero, where we define $\omega_\C$ by 
+\begin{align}
+&\omega_\C (a_1v_1+ib_1v_2, a_2w_1+ib_2w_2)\\
+&\triangleq a_1a_2\omega(v_1,w_1)-b_1b_2\omega(v_2,w_2)+ i[b_1a_2\omega (v_2,w_1)+a_1b_2\omega (v_1,w_2)]
+\end{align}
+
+
+\section{Fundamental form and complex inner product induced by compatible real inner product and almost complex structure}
+For each finite dimensional real inner product space $(V,g)$, an almost complex structure $J:V\rightarrow V$ is said to be \textbf{compatible} with $g$ if 
+\begin{align*}
+g(J(v_1),J(v_2))=g(v_1,v_2)
+\end{align*}
+Given such compatible $(V,g,J)$, one see that the decomposition $V_\C=V^{1,0}\oplus V^{0,1}$ is orthogonal, and we associate it with its \textbf{fundamental form} $\omega\in \operatorname{Hom}^2(V\times V,\R)$ by 
+\begin{align*}
+\omega (v,w)\triangleq  g(J(v),w)
+\end{align*}
+It is easy to see $\omega$ is always alternating, and that $h\triangleq g- i \omega$ forms a complex inner product when $V$ is viewed as a complex vector space. 
+
+\chapter{Complex Manifold}
+\section{Definition and Examples}
+Given some topological manifold $M$, by a \textbf{holomorphic chart}, we mean an open subset $U\subseteq M$ and a topological embedding  $\phi : U \rightarrow \C^n$. For two complex charts $\phi_i$ and $\phi_j$ to be \textbf{compatible}, the function $\phi_i \circ \phi_j |_{\phi_j (U_i \cap U_j)}$ has to be holomorphic. A collection of complex charts is said to be a \textbf{holomorphic atlas} if the collection covers the whole $M$ and all pairs of the charts in the collection are compatible.  A \textbf{complex structure} on $M$ if exists, is just a maximal holomorphic atlas. By a \textbf{complex manifold}, we mean a topological manifold together with a complex structure. \\
+
+The first example of complex manifold is the \textbf{complex projective space}. Define an equivalence relation on $\C^
+{n+1}\setminus \set{0}$ by 
+\begin{align*}
+ z \sim  w \overset{\triangle}{\iff } z= \ld w \text{ for some }\ld \inc^*
+\end{align*}
+The complex projective space is defined to be the quotient topological space $\P^n\triangleq (\C^{n+1}\setminus \set{0}) \quotient \sim $. We use the notation $(z_0:\dots :z_n)$ to denote elements of $\P^n$. Clearly, 
+ \begin{align*}
+U_i \triangleq \set{(z_0: \dots :z_n)\in\P^n : z_i \neq 0}
+\end{align*}
+forms an open cover of $\P^n$, and the maps 
+ \begin{align*}
+\phi_i:U_i\rightarrow \C^n,\quad (z_0: \dots:z_n)\mapsto (\frac{z_0}{z_i},\dots , \frac{z_{i-1}}{z_i},\frac{z_{i+1}}{z_i},\dots ,\frac{z_n}{z_i})
+\end{align*}
+forms a holomorphic atlas. \\
+
+The second example is the \textbf{complex tori}. Define an equivalence relation on $\C^n$ by 
+ \begin{align*}
+z \sim  w \overset{\triangle }{\iff }\text{ For all  }j\text{ there exists some $a,b \inz$ such that }z_j-w_j= a+ ib
+\end{align*}
+The complex tori is defined to be the quotient topological space $\C^n \quotient \sim$. Let $\pi $ be the quotient map. Clearly for all $z\inc^n$, if we let $\epsilon = (\frac{1}{2},\dots ,\frac{1}{2})$, then $\pi  (B_\epsilon (z))$ is open in the tori.  
 \end{document}
